<resources>
    <string name="app_name">Download Complete</string>
    <string name="new_tournament">new tournament</string>
    <string name="past_tournaments">past tournaments</string>
    <string name="resume_tournament">resume tournament</string>
    <string name="player_button">player index</string>
    <string name="statistics">statistics</string>
    <string name="past_tournaments_action_bar">Tournament</string>
    <string name="add_tournament">Add Tournament</string>
    <string name="contact_me_text">If you see this text please contact me</string>
    <string name="opponents_tag">Opponent\'s Tag</string>
    <string name="submit">Submit</string>
    <string name="set">Set</string>
    <string name="vs">vs</string>
    <string name="set_format">Set Format:</string>
    <string name="previous_strike">Previous Strike</string>
    <string name="stage">Stage</string>
    <string name="start_a_new_set">start a new set</string>
    <string name="end_tournament">end tournament</string>
    <string-array name="set_formats">
        <item>Bo3</item>
        <item>Bo5</item>
    </string-array>
    <string-array name="melee_characters">
        <item>Kirby</item>
        <item>Fox</item>
        <item>Falco</item>
        <item>Marth</item>
        <item>Sheik</item>
        <item>Jigglypuff</item>
        <item>Peach</item>
        <item>Ice Clumbers</item>
        <item>C. Falcon</item>
        <item>Pikachu</item>
        <item>Samus</item>
        <item>Dr. Mario</item>
        <item>Yoshi</item>
        <item>Luigi</item>
        <item>Ganondorf</item>
        <item>Mario</item>
        <item>Young Link</item>
        <item>Donkey Kong</item>
        <item>Link</item>
        <item>Mr. G&amp;W</item>
        <item>Roy</item>
        <item>Mewtwo</item>
        <item>Zelda</item>
        <item>Ness</item>
        <item>Pichu</item>
        <item>Bowser</item>
    </string-array>
</resources>
