<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="me.ericwong.downloadcomplete.MainActivity">

    <TextView android:id="@+id/melee_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FIGHT!"
        android:textSize="90sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryText"/>

    <TextView android:id="@+id/tournament_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/melee_text"
        android:text="@string/contact_me_text"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp"/>

    <TextView android:id="@+id/game_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tournament_count"
        android:text="@string/contact_me_text"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp"/>

    <Button android:id="@+id/tournament_button"
        android:layout_width="220dp"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:text="@string/new_tournament"
        android:layout_below="@+id/game_count"
        android:layout_centerHorizontal="true"
        android:onClick="tournamentButtonClick" />

    <Button android:id="@+id/past_tournaments_button"
        android:layout_width="220dp"
        android:layout_height="75dp"
        android:text="@string/past_tournaments"
        android:layout_below="@+id/tournament_button"
        android:layout_centerHorizontal="true"
        android:onClick="pastTournamentsButtonClick" />

    <Button android:id="@+id/player_button"
        android:layout_width="220dp"
        android:layout_height="75dp"
        android:text="@string/player_button"
        android:layout_below="@+id/past_tournaments_button"
        android:layout_centerHorizontal="true"
        android:onClick="playerButtonClick" />

    <Button android:id="@+id/stats_button"
        android:layout_width="220dp"
        android:layout_height="75dp"
        android:text="@string/statistics"
        android:layout_below="@+id/player_button"
        android:layout_centerHorizontal="true"
        android:onClick="statsButtonClick" />

</RelativeLayout>
